# mkp-fraud-preventions-ms

./: .gitignore  Demo Traffic Generator.postman_collection.json  Dockerfile  Fraud Prevention API Copy.postman_collection.json  Health Check.postman_collection.json  Makefile  Monitoring Tests.postman_collection.json  README.md  docker-compose.yml  jest.config.js  ormconfig.json  package-lock.json  package.json  postman_collection.json  pyproject.toml  requirements.txt  start.sh  tsconfig.json
.github/workflows/: ci-cd.yml  deploy.yml  terraform.yml
docs/: api-endpoints.md  deployment.md  development.md  integration.md  metrics_guide.md
src/: __init__.py  index.ts  main.py  metrics.py
src/__tests__/: fraudPrevention.test.ts  fraudPreventionService.test.ts  setup.ts
src/controllers/: fraudPreventionController.ts
src/database/: database.py
src/datasource/: data-source.ts  datasource.ts
src/entity/: fraudPreventionEntity.ts
src/migrations/: 1710965644123-CreateFraudPreventionTable.ts
src/models/: fraud_prevention.py
src/routes/: __init__.py  fraudPreventionRouter.ts  fraud_prevention.py
src/schemas/: fraud_prevention.py
src/services/: fraudPreventionService.ts  fraud_prevention.py
terraform/: main.tf  monitoring.tf  outputs.tf  tfplan  variables.tf
terraform/.terraform/: terraform.tfstate
tests/: conftest.py  test_fraud_prevention.py  test_service.py
